# kreeda-backend

./: .env  .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  API_COVERAGE_ANALYSIS.md  API_DOCUMENTATION.md  API_ENDPOINT_MAPPING.md  ARCHITECTURE_SUMMARY.md  CI-CD-COMPLETE.md  CONTEXT.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OAUTH2_COMPLIANCE.md  PACKAGE_STRUCTURE.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  README.md  README_NEW.md  REBUILD_SUMMARY.md  RENDER_ENV_VARS.md  TEST_AUTOMATION_SUCCESS_REPORT.md  TODO.md  TODO_ANALYSIS.md  TOURNAMENT_SYSTEM_COMPLETION_REPORT.md  USER_ENDPOINTS_GUIDE.md  alembic.ini  analyze_services.sh  build-minimal.sh  build.sh  debug_delete.py  deploy.sh  deployment-info.md  (+30 more)
.github/: DEVELOPMENT_WORKFLOW.md  copilot-instructions.md
.github/workflows/: ci-cd.yml  dependency-updates.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_cricket_models.py  001_initial_migration.py  06c627dbae38_initial_user_tables.py  29c563fd012d_add_tournament_system_models.py  40cfc5d68d9c_initial_schema_user_auth_profiles_and_.py  (+14 more)
app/: __init__.py  config.py  main.py
docker/: Dockerfile  docker-compose.dev.yml
docs/: API_DESIGN.md  API_OVERVIEW.md  CI-CD-Enhancement-Summary.md  CI-CD.md  PHASE2_SUMMARY.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE4_WEBSOCKET_DESIGN.md  PROFESSIONAL_CODE_REVIEW.md  __init__.py  oauth2_documentation.py  schema.md
nginx/: development.conf
postman/: COLLECTION_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  Kreeda_API.postman_collection.json  Kreeda_API_Complete.postman_collection.json  Kreeda_API_Complete_Tests.postman_collection.json  Kreeda_API_Enhanced.postman_collection.json  Kreeda_Development.postman_environment.json  Kreeda_Development_TestAutomation.postman_environment.json  Kreeda_Production.postman_environment.json  Kreeda_Production_TestAutomation.postman_environment.json  README.md  TESTING_WORKFLOW.md  TEST_AUTOMATION_COMPLETE.md  TEST_AUTOMATION_GUIDE.md  openapi.json
requirements/: base.txt  development.txt  production.txt  test.txt
scripts/: deploy-old.sh  deploy-to-render.sh  deploy.sh  init-db.sh  init-db.sql  run-dev.sh  run-tests.sh  run_api_tests.sh  setup-github.sh  test_comprehensive.sh  test_phase2.py  test_phase2_manual.sh  test_phase2_simple.sh  test_phase3_live_scoring.py  test_scoring_integrity.sh
src/: main.py
test-results/: newman-enhanced-results.json
tests/: __init__.py  conftest.py  test_auth.py  test_cricket.py  test_e2e_integration.py  test_integration.py  test_main.py  test_notifications.py  test_statistics.py  test_stats_api.py  test_teams.py  test_tournaments.py  test_user_profile.py  test_utils.py  test_websocket.py
(+176 files in other folders)
